--- a/app/src/main/res/layout/activity_booking_summary.xml
+++ b/app/src/main/res/layout/activity_booking_summary.xml
@@ -291,6 +291,52 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/llContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAgeBg"
+            android:layout_marginTop="@dimen/margin_16dp"
+            android:orientation="vertical">
+
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/avenir_black"
+                    android:padding="10dp"
+                    android:textAlignment="textStart"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/selected_slots"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="12sp" />
+
+          <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvSelectedSlots"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_5"/>
+
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_black"
+            android:padding="10dp"
+            android:textAlignment="textStart"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/personal_trainer"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="12sp" />
+
+
+
     </LinearLayout>
 
 </layout>
