--- a/app/src/main/res/layout/row_selected_slots.xml
+++ b/app/src/main/res/layout/row_selected_slots.xml
@@ -12,65 +12,77 @@
     <RelativeLayout
         android:id="@+id/rltSelected_slots"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
-        android:layout_marginEnd="@dimen/margin_8dp"
-        android:background="@drawable/select_age_bg"
-        android:paddingBottom="@dimen/dimen_10"
-        android:layout_marginTop="@dimen/margin_4dp"
-        android:layout_marginBottom="@dimen/margin_4dp"
-        android:elevation="1dp">
+        android:layout_height="wrap_content">
 
 
-
-    <TextView
-            android:id="@+id/tvSelectedDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             android:layout_alignParentStart="true"
-            android:textSize="@dimen/font_10sp"
-            android:paddingStart="@dimen/margin_8dp"
-             android:paddingEnd="@dimen/margin_8dp"
-             android:paddingTop="@dimen/margin_8dp"
-             android:paddingBottom="@dimen/margin_8dp"
-            android:gravity="center"
-            android:text="wed 24 2021"
-            android:textColor="@color/colorText"
-            android:fontFamily="@font/avenir_light" />
-
-
-
-        <LinearLayout
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:paddingStart="@dimen/margin_8dp"
-            android:paddingEnd="@dimen/margin_8dp"
-            android:paddingTop="@dimen/margin_8dp"
-            android:paddingBottom="@dimen/margin_8dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/ivClock"
-                android:layout_width="@dimen/dimen_10"
-                android:layout_height="@dimen/dimen_10"
-                android:src="@drawable/time"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/dimen_7"/>
+        <RelativeLayout
+            android:id="@+id/rltSelected_slot"
+            android:layout_marginStart="10dp"
+            android:background="@color/colorAgeBg"
+            android:layout_width="match_parent"
+            android:layout_marginEnd="@dimen/margin_8dp"
+            android:paddingBottom="@dimen/dimen_10"
+            android:layout_marginTop="@dimen/margin_4dp"
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tvSelectedTime"
+                android:id="@+id/tvSelectedDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
+                android:layout_alignParentStart="true"
                 android:textSize="@dimen/font_10sp"
-                android:paddingStart="8dp"
-                android:text=""
+                android:paddingStart="@dimen/margin_8dp"
+                android:paddingEnd="@dimen/margin_8dp"
+                android:paddingTop="@dimen/margin_8dp"
+                android:paddingBottom="@dimen/margin_8dp"
+                android:gravity="center"
+                android:text="wed 24 2021"
                 android:textColor="@color/colorText"
                 android:fontFamily="@font/avenir_light" />
 
+            <LinearLayout
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:paddingStart="@dimen/margin_8dp"
+                android:paddingEnd="@dimen/margin_8dp"
+                android:paddingTop="@dimen/margin_8dp"
+                android:paddingBottom="@dimen/margin_8dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/ivClock"
+                    android:layout_width="@dimen/dimen_10"
+                    android:layout_height="@dimen/dimen_10"
+                    android:src="@drawable/time"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/dimen_7"/>
+
+                <TextView
+                    android:id="@+id/tvSelectedTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="viewStart"
+                    android:textSize="@dimen/font_10sp"
+                    android:paddingStart="8dp"
+                    android:text=""
+                    android:textColor="@color/colorText"
+                    android:fontFamily="@font/avenir_light" />
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+
+        <View
+            android:layout_below="@+id/rltSelected_slot"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginEnd="@dimen/dimen_10"
+            android:layout_marginStart="10dp"
+            android:background="@color/gray2" />
+
 
     </RelativeLayout>
 
